--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
       display: none;
       width: 90vw;
       height: 90vh;
-      margin: 0% 5% 10% 5%;
+      margin: 0%;
       display: flex;
       flex-direction: column;
       background: #fff;
